# NM_AI_2026

./: cloudbuild.yaml  main.py  pyproject.toml
pregame/: pre.py
task1/: .gitignore  PROGRESS.md  benchmark.py  benchmark.slurm  benchmark_parallel.slurm  benchmark_tta_sweep.slurm  compare_runs.py  convert_dataset.py  convert_fulldata.py  ensemble_run.py  launch_rtdetr.sh  launch_sweep.sh  launch_sweep2.sh  launch_sweep2b.sh  launch_sweep3.sh  launch_sweep4.sh  launch_sweep5.sh  make_dataset.py  package.slurm  package_ensemble.py  package_ensemble.slurm  package_model.py  package_submission.py  step1_setup.slurm  step2_baseline.slurm  step3a_convert.slurm  step3b_train.slurm  step3c_package.slurm  sweep_train.py  train_model.py
task2/: Dockerfile  main.py  requirements.txt
task2-havard/: .gitignore  main.py  progress.md  requirements.txt  start.sh
task2-havard/info/: Overview.md  Sandbox account.md  Scoring.md
task2-hk/: main.py
task2-hk/info/: Examples.md  endpoint spec.md
task2-kristian/: main.py  progress.md  trouble_shooting.md
task3/: benchmark_unet.py  download_history.py  main.py  solution_v4.py  solution_v5.py
