[project]
name = "nm-ai-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "google-genai>=1.68.0",
    "ngrok>=1.7.0",
    "numpy>=2.4.3",
    "requests>=2.32.5",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]
